syntax = "proto3";
package runner;

option go_package = "github.com/volumefi/cronchain/x/consensus/testdata/types";

message SimpleMessage {
  string sender = 1;
  string hello = 2;
  string world = 3;
}


message EvenSimplerMessage {
  string sender = 1;
  string boo = 2;
}

